test/fixtures/_snapshots/formatTest_errorTests.2d0a411f.0.snapshot
formatTest › errorTests › ./test/fixtures/formatTest/errorTests/reservedField.re
File \"./test/fixtures/formatTest/errorTests/reservedField.re\", line 1, characters 11-15:
1 | let x = {< type >};
               ^^^^
Error: type is a reserved keyword, it cannot be used as an identifier. Try `type_` or `_type` instead


